--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "mern_pro_shopp",
   "version": "1.0.0",
   "description": "MERN Shopping Cart App",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,14 @@
   },
   "homepage": "https://github.com/WalkerSyed581/mern_proshop#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "concurrently": "^7.5.0",
+    "nodemon": "^2.0.20"
   }
 }
